test/functions/diten/varFnRetClasses.good
varFnRetClasses.chpl: 11: error: all return types must match exactly to return by ref
